# leonie-seo

./: .env.example  .gitignore  AGENTS.md  AUDIT_CLAUDE_CODE.md  AUDIT_CODE.md  AUDIT_DOCS.md  AUDIT_INFRA.md  CLAUDE.md  CONTEXT.md  DECISIONS.md  Dockerfile  PROGRESS.md  PROJECT_BRIEF.md  RAPPORT_AUDIT.md  README.md  ROADMAP.md  install.sh  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.json
.claude/agents/: code-reviewer.md  python-quality.md  shopify-architecture-reviewer.md  shopify-safety.md  test-triage.md
.claude/hooks/: ruff-check.sh
.codex/agents/: python-quality.toml  shopify-safety.toml
.github/workflows/: ci.yml  keepalive.yml  weekly_audit.yml
Ananlyse_json/: Export reanalyse 02 Juil 2026.json  analyse-complete-2026-06-25.json
app/: analysis_artifacts.py  db.py  db_adapter.py  google_scopes.py  language.py  main.py  managed_products.py  paths.py  safety.py  shop_config_store.py  shop_identity.py  tenant_config.py
config/: keywords.yaml
docs/: AI_HANDOFF.md  APP_STORE_READINESS.md  ARCHITECTURE.md  COMMANDS.md  GEMINI_GROUNDING_IMPLEMENTATION.md  GEMINI_VALUE_FIX_PLAN.md  MARKET_ANALYSIS_DATA_PROVIDERS.md  action-card-spec.md  advanced-tools-strategy.md  ai-content-actions.md  app-store-listing-copy.md  app-store-submission-checklist.md  app-store-test-instructions.md  claude-code-prompt-merchant-journey.md  codex-prompt-merchant-journey.md  crawl-strategy.md  cta-matrix.md  dashboard-command-center.md  dashboard-simplification.md  first-run-merchant-journey.md  guide-utilisateur.fr.md  impact-feedback-loop.md  impact-tracker.md  launch-readiness.md  learning-engine.md  llm-strategy.md  merchant-language-glossary.md  niche-understanding-gate.md  niche-understanding.md  opportunity-finder.md  phase-11-geo-summary.md  pilot-merchant-test-script.md  pilot-real-store-feedback.md  pilot-real-store-measurement.md  pilot-real-store-setup.md  pilot-real-store-test-log.md  pilot-real-store-test-plan.md  plans.md  priority-engine.md  product-scope.md  (+6 more)
evaluation/: Analyse marché Mai 2026.json
frontend/: package-lock.json  package.json  vite.config.js
scripts/: README.md  _config.py  _paths.py  cli.py  generate_quota_code.py  license.py  pilot_smoke.py  setup.py
shopify-app/: .env.example  .gitignore  package-lock.json  package.json  shopify.app.local.toml  shopify.app.pilot.toml  shopify.app.toml  shopify.web.toml  tsconfig.json  vite.config.js  vite.config.ts
skills/: petfood-niche.md  seo-technique.md  shopify-graphql.md
tests/: conftest.py  test_cli.py  test_config.py  test_db_adapter.py  test_language.py  test_license.py  test_managed_products.py  test_niche_config.py  test_nlp_lang_resources.py  test_paths_and_scopes.py  test_pilot_smoke.py  test_setup.py  test_shop_config_store.py  test_shop_identity.py
(+658 files in other folders)
