[project]
name = "leonie-seo"
version = "0.1.0"
description = "SEO automation pipeline for Shopify boutiques"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["seo", "shopify", "automation", "e-commerce"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pandas",
    "python-dotenv",
    "pydantic",
    "click",
    "rich",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "pyyaml",
]

[project.scripts]
leonie-seo = "scripts.cli:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "ruff"]

[tool.setuptools]
packages = ["scripts", "scripts.audit", "scripts.report", "scripts.apply"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
