[project]
name = "leonie-seo"
version = "0.1.0"
description = "SEO automation pipeline for Shopify boutiques"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["seo", "shopify", "automation", "e-commerce"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pandas",
    "python-dotenv",
    "pydantic",
    "click",
    "rich",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "pyyaml",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "httpx",
    "cryptography",
    "pyjwt",
    "jinja2",
]

[project.scripts]
leonie-seo = "scripts.cli:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "ruff"]
postgres = ["psycopg2-binary"]
llm = ["openai>=1.0.0", "groq>=0.4.0"]
niche = ["pytrends"]
embeddings = ["sentence-transformers>=2.2.0"]

[tool.setuptools]
packages = [
    "scripts", "scripts.audit", "scripts.report", "scripts.apply",
    "app", "app.oauth", "app.api", "app.billing", "app.jobs",
    "app.llm", "app.llm.providers",
    "app.niche", "app.niche.signals",
    "app.apply",
    "app.observability",
    "app.jsonld",
    "app.embeddings",
    "app.impact",
    "app.ga4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
